Fix skills page layout on small screens

--- a/src/components/Skill.scss
+++ b/src/components/Skill.scss
@@ -20,7 +20,7 @@
 }
 
 .rating {
-  width: 300px;
+  width: 100%;
   height: 10px;
   background-color: var(--color-darker-primary);
   border-radius: 5px;
