--- a/src/components/Works.scss
+++ b/src/components/Works.scss
@@ -2,7 +2,7 @@
   &-container {
     margin: 0 100px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 10px;
   }
 }
